@@ -1,3 +1,4 @@
+* fix memory leak in XRDMLFile by abandoning minidom
 * spec-parser improvements, keep file closed when not parsing it
 * peak_fit: linear background feature
 * peak_fit function: enhancement of automatic initial parameter determination
